@@ -1,0 +1,11 @@
+DEVICE="eth0"
+TYPE="Ethernet"
+ONBOOT="yes"
+BOOTPROTO="static"
+IPV6INIT="no"
+MTU="1500"
+NM_CONTROLLED="yes"
+
+IPADDR=192.168.192.10
+NETMASK=255.255.255.0
+GATEWAY=192.168.192.254
