@@ -9,6 +9,7 @@ Moos Changelog
 1.6.4
 =====
 2015-MM-DD
++ Add server tools;
 
 
 1.6.3
